--- a/jul23/widgets/index.html
+++ b/jul23/widgets/index.html
@@ -2,11 +2,14 @@
 <head>
 
   <title>widgets</title>
+  <!-- <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase" rel="stylesheet">
+  
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/reset.css">
   <script src="./dist/bundle.js"></script>
 </head>
 <body>
-  <div id="root">not working</div>
+  <div id="root">React not working</div>
 </body>
 </html>
