--- a/jul23/widgets/index.html
+++ b/jul23/widgets/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 
-  <title>widgets</title>
+  <title>React Widgets</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
