--- a/aug2018/react_calendar/index.html
+++ b/aug2018/react_calendar/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="assets/reset.css">
 	<script src="bundle.js"></script>
 </head>
 <body>
