add main.css for quick functional styling. flesh out this.minus() functionality

--- a/aug2018/react_calculator/index.html
+++ b/aug2018/react_calculator/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>React Calc</title>
   <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/main.css" />
   <script src="bundle.js"></script>
 </head>
 <body>
