ctci 1.5: one away (js + jasmine)

--- a/oct2018/oct19/CTCI_3problems/SpecRunner.html
+++ b/oct2018/oct19/CTCI_3problems/SpecRunner.html
@@ -16,12 +16,14 @@
   <script src="src/Song.js"></script> -->
   <script src="src/urlify.js"></script>
   <script src="src/palindrome_perm.js"></script>
+  <script src="src/one_away.js"></script>
 
   <!-- include spec files here... -->
   <!-- <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script> -->
   <script src="spec/urlify_spec.js"></script>
   <script src="spec/palindrome_perm_spec.js"></script>
+  <script src="spec/one_away_spec.js"></script>
 
 </head>
 
